--- a/src/commons/components/searchbar/styles.module.css
+++ b/src/commons/components/searchbar/styles.module.css
@@ -199,7 +199,7 @@
 /* Small Size */
 .searchBar.size-small {
   height: 36px;
-  padding: 0 12px;
+  padding: 0 8px 0 8px;
 }
 
 .searchBar.size-small .searchIcon {
@@ -215,7 +215,7 @@
 /* Medium Size */
 .searchBar.size-medium {
   height: 42px;
-  padding: 0 14px;
+  padding: 0 10px 0 10px;
 }
 
 .searchBar.size-medium .searchIcon {
@@ -231,7 +231,7 @@
 /* Large Size */
 .searchBar.size-large {
   height: 48px;
-  padding: 0 16px;
+  padding: 0 12px 0 12px;
 }
 
 .searchBar.size-large .searchIcon {
