refactor: SearchBar 아이콘을 public/icons/search.svg 파일로 변경
- 인라인 SVG 제거
- public/icons/search.svg 파일 사용
- img 태그로 아이콘 로드
- 불필요한 CSS color 설정 제거

--- a/src/commons/components/searchbar/styles.module.css
+++ b/src/commons/components/searchbar/styles.module.css
@@ -24,7 +24,7 @@
 }
 
 .searchIcon {
-  color: var(--color-gray-500);
+  display: block;
 }
 
 .input {
@@ -128,10 +128,6 @@
   font-weight: 400;
 }
 
-.searchBar.state-default.theme-dark .searchIcon {
-  color: var(--color-gray-400);
-}
-
 /* Selected State */
 .searchBar.state-selected.theme-dark {
   background-color: var(--color-gray-900);
@@ -146,10 +142,6 @@
 .searchBar.state-selected.theme-dark .input::placeholder {
   color: var(--color-gray-400);
   font-weight: 400;
-}
-
-.searchBar.state-selected.theme-dark .searchIcon {
-  color: var(--color-gray-400);
 }
 
 /* Filled State */
@@ -168,10 +160,6 @@
   font-weight: 500;
 }
 
-.searchBar.state-filled.theme-dark .searchIcon {
-  color: var(--color-gray-w);
-}
-
 /* Typing State */
 .searchBar.state-typing.theme-dark {
   background-color: var(--color-gray-900);
@@ -186,10 +174,6 @@
 .searchBar.state-typing.theme-dark .input::placeholder {
   color: var(--color-gray-w);
   font-weight: 500;
-}
-
-.searchBar.state-typing.theme-dark .searchIcon {
-  color: var(--color-gray-w);
 }
 
 /* ===================================
