refactor: font-family 하드코딩을 CSS 변수로 변경

--- a/src/components/boards/styles.module.css
+++ b/src/components/boards/styles.module.css
@@ -101,7 +101,7 @@
 
 /* input 내부 (ant 내부 클래스 override) */
 .datePicker :global(.ant-picker-input > input) {
-  font-family: "Pretendard", sans-serif;
+  font-family: var(--typo-font-family-ko);
   font-size: 16px;
   color: var(--color-gray-900);
 }
